  prototype library. [Peter]
* Fixed regular expression in Smarty_Compiler class to allow usage of anchor
  tag. [Peter]
* Fixed typo in code which would probably cause a bug in link tag [Peter].
* Added backwards compatible support for var tag in sphTopicsPlugin [Peter].
* Added AF_BOOL_OBLIGATORY flag (needed because in the past someone thought
  the bool attribute wouldn't need one). [Peter]

Changed in ATK 5.6
------------------
+ Added phpmail extension, now you can easily create html mails even with
  attachments through an mail object. [dennisjan]
+ Changed atkFckAttribute's HTML based resourcemanager into a PHP based
  version to support themes [Wim]
+ Added ajax powered smart search functionality for performing arbitraty
  searches on any node. [Peter]
+ Added atkMessageQueue class for adding user notification messages. [Patrick]
+ Added atkMlWrapper for turning any attribute into an internationalisation
  enabled attribute. [Ivo]
+ Added atkCalculatorAttribute for adding columns with calculated values.
  [Ivo]
+ Added atkShuttleRelation. [Ivo]
+ Added atkRowCounter for sequentially numbering rows. [Ivo, Przemek, JorgeG]
+ Added atkUrlAttribute for representing urls in the database. (bug #604)
  [Przemek]
+ Added atkUpdatedByAttribute for keeping track of which user has modified a
  record. (bug #457) [Yury, Ivo]
+ Added 'macoslike' theme. [Marcel]
+ Added 't3skin' theme (Typo3 style). [Ivo]
+ Added setText method to atkLanguage. [Sandy]
+ Added atkMailer class for sending html mails (uses phpMailer software).
  [Peter, Dennis-Jan]
+ Added atkPluginTestCase class for easier testing of Smarty plugins. [Ivo]
+ Added support for row and col spans in the atkTableRenderer. [Sandy]
+ Added NOLOAD constant for use in atkAttribute's loadType() method. [Ivo]
+ Added ability to set a CSS class per row, column or cell in
  atkTableRenderer. [Guido]
+ Added reloadapp(); function which can be used to reload all the frames in
  the application. [Boy]